[package]
edition = "2018"
name = "solflow_contract"
version = "0.1.0"

[features]
no-entrypoint = []

[dependencies]
borsh = "0.9.1"
borsh-derive = "0.9.1"
solana-program = "=1.7.9"

[dev-dependencies]
solana-program-test = "=1.7.9"
solana-sdk = "=1.7.9"

[lib]
crate-type = ["cdylib", "lib"]
name = "helloworld"
